tests/errors/group-comb-conflict.expect
---CODE---
1
---STDERR---
Error: tests/errors/group-comb-conflict.futil
11 |      w1.in = 32'd10;
   |      ^^^^^^^^^^^^^^^ Malformed Structure: Obviously conflicting assignments found
...
14 |      w1.in = r.out;
   |      ^^^^^^^^^^^^^^ `w1.in` is also written to here
...
22 |      do_r;
   |      ^^^^^ Assignments activated by group enable, causing the conflict
